# ps_deals_search

./: .env.sample  .gitignore  .mockery.yaml  Dockerfile  README.md  docker-compose.dev.yaml  go.mod  go.sum  main.go
collectors/: deals.go  game.go  game_test.go  games_list.go  games_list_test.go
dispatcher/: main.go
ps_browser/: .env.sample  .prettierrc  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.js
ps_browser/src/app/: filters.tsx  gameItem.tsx  gamesList.tsx  globals.css  layout.tsx  loading.tsx  page.tsx  redirectToSearch.ts  search.tsx
ps_browser/src/components/: button.tsx  pagination.tsx  searchIcon.tsx  spinner.tsx
ps_browser/src/components/icons/: filtersIcon.tsx  searchIcon.tsx
ps_browser/src/lib/logger/: index.ts
ps_browser/src/lib/queries/: searchGamesQuery.ts
ps_browser/src/lib/repositories/: schema.ts
ps_crawler/: .env.sample  README.md  main.go
ps_crawler/collectors/: game.go  game_test.go  games_list.go
ps_crawler/dispatcher/: main.go
ps_ingest/: .env.sample  Dockerfile  README.md  go.mod  go.sum  main.go
ps_ingest/dataTypes/: game.go
ps_ingest/http/: healthz.go  healthz_test.go
ps_ingest/nats/: mock.go  nats.go  nats_test.go
ps_ingest/postgres/: mock.go  postgres.go  postgres_test.go
ps_ingest/serialization/: serialization.go  serialization_test.go
ps_ingest/serviceAdapter/: adapter.go
ps_ingest/subscriber/: subscriber.go
psembedding/: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml
psembedding/src/psembedding/: __about__.py  __init__.py  __main__.py  config.py
psembedding/src/psembedding/embedder/: __init__.py  embedder.py
psembedding/src/psembedding/http/: __init__.py  healthz.py
psembedding/src/psembedding/nats/: __init__.py  nats.py
psembedding/tests/: test_http.py
resources/: .env.sample  auth.conf  docker-compose.dev.yaml  pg_init.sql
resources/postgres/: pg_init.sql
(+9 files in other folders)
